Implementação do sistema de alterar senha e ajustes finos

--- a/app/templates/mylists.html
+++ b/app/templates/mylists.html
@@ -199,7 +199,7 @@
 </div>
 <div class="row row-cols-1 row-cols-md-4">
 
-  <div class="col-lg-6">
+  <div class="col-lg-6 mb-4">
     <div class="placeholder-square w-100 pt-5 pb-5" href="#exampleModalToggle" data-bs-toggle="modal">
       <span class="plus-icon">+</span>
       <a>Add List</a>
