--- a/app/templates/includes/header.html
+++ b/app/templates/includes/header.html
@@ -2,6 +2,11 @@
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="navbar-collapse justify-content-end px-0" id="navbarNav">
             <ul class="navbar-nav flex-row ms-auto align-items-center justify-content-end">
+                <li class="nav-item d-block d-xl-none">
+                    <a class="nav-link sidebartoggler nav-icon-hover" id="headerCollapse" href="javascript:void(0)">
+                      <i class="ti ti-menu-2"></i>
+                    </a>
+                  </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link nav-icon-hover" href="javascript:void(0)" id="drop2" data-bs-toggle="dropdown"
                         aria-expanded="false">
