--- a/app/templates/includes/sidebar.html
+++ b/app/templates/includes/sidebar.html
@@ -53,7 +53,7 @@
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a class="sidebar-link" href="./ui-alerts.html" aria-expanded="false">
+                    <a class="sidebar-link" href="{{ url_for('auth.reset_pass') }}" aria-expanded="false">
                         <span>
                             <i class="ti ti-lock"></i>
                         </span>
