Introduce my account page

--- a/app/templates/includes/sidebar.html
+++ b/app/templates/includes/sidebar.html
@@ -45,7 +45,7 @@
                     <span class="hide-menu">Account</span>
                 </li>
                 <li class="sidebar-item">
-                    <a class="sidebar-link" href="./ui-buttons.html" aria-expanded="false">
+                    <a class="sidebar-link" href="{{ url_for('home.my_account') }}" aria-expanded="false">
                         <span>
                             <i class="ti ti-user"></i>
                         </span>
